--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,23 @@ textarea {
 :root {
     --FF: 'Nanito', san-serif;
     --FF-HEADINGS: "Fugaz One", cursive;
+    /* the below code makes the font size responsive, that is, it makes it grow*/
     --FS: clamp(1rem, 2.2vh, 1.5rem);
 
     /* COLORS */
     --BGCOLOR : orange;
     --BGCOLOR-FADE: rgb(252, 220, 160);
-    --BGIMAGE: liner-gradient(to bottom, var(--BGIMAGE), va(--BGCOLOR-FADE));
+    --BGIMAGE: linear-gradient(to bottom, var(--BGCOLOR), var(--BGCOLOR-FADE));
     --BODY-BGCOLOR: #fff;
     --FONTCOLOR: #000;
+    --BORDER-COLOR: #333;
+    --HIGHLIGHT-COLOR: rgb(51, 178, 51);
+    --LINK-COLOR: #000;
+    --LINK-HOVER: hsla(0, 0%, 0%, 0.6);
+    --LINK-ACTIVE: orange;
+
+    /* BORDERS */
+    --BORDERS: 1px solid var(--BORDER-COLOR);
 }
 
 /* ||UTILITY CLASSES */
@@ -49,4 +58,46 @@ textarea {
 
 .center {
     text-align: center;
+}
+
+/* ||GENERAL STYLES */
+
+html {
+    scroll-behavior: smooth;
+    font-size: var(--FS);
+    font-family: var(--FF);
+    background-color: var(--BGCOLOR);
+    background-image: var(--BGIMAGE);
+}
+body{
+    color: var(--FONTCOLOR);
+    background-color: var(--BODY-BGCOLOR);
+    min-height: 100vh;
+    max-width: 800px;
+    margin: 0 auto;
+    border-left: var(--BORDERS);
+    border-right: var(--BORDERS);
+    box-shadow: 0 0 10px var(--BORDER-COLOR);
+}
+
+h1, h2, h3 {
+    font-family: var(--FF-HEADINGS);
+    letter-spacing: 0.03em;
+}
+h2, h3 {
+    margin-bottom: 1em;
+    color: var(--HIGHLIGHT-COLOR);
+}
+P{
+    line-height: 1.5;
+}
+a:any-link{
+    color: var(--LINK-COLOR);
+}
+a:hover, a:focus-visible{
+    color: var(--LINK-HOVER);
+}
+
+a:active {
+    color: var(--LINK-ACTIVE);
 }
