--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ textarea {
     --HEADER-BGCOLOR: #000;
     --HEADER-COLOR: #fff;
     --NAV-BGCOLOR: #fff;
+    --HERO-BGCOLOR: rgba(51, 178, 51,0.75);
+    --HERO-COLOR: #fff;
 
     /* BORDERS */
     --BORDERS: 1px solid var(--BORDER-COLOR);
@@ -119,16 +121,58 @@ a:active {
     top: 0;
     z-index: 1;
 }
-.header__h1{
+.header__h1 {
     text-align: center;
     background-color: var(--HEADER-BGCOLOR);
     color: var(--HEADER-COLOR);
     padding: var(--PADDING-TB) var(--PADDING-SIDE);
 }
 
-.header__nav{
+.header__nav {
     background-color: var(--NAV-BGCOLOR);
     border-bottom: var(--BORDERS);
     font-weight: bold;
     box-shadow: 0 6px 5px -5px var(--BORDER-COLOR);
+    padding: var(--PADDING-TB) var(--PADDING-SIDE);
+}
+
+.header__ul {
+    padding: var(--PADDING-TB) var(--PADDING-SIDE);
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem;
+}
+
+/* ||HERO */
+.hero {
+    position: relative;
+}
+.hero__h2{
+    background-color: var(--HERO-BGCOLOR);
+    color: var(--HERO-COLOR);
+    padding: 0.25em 0.5em;
+    letter-spacing: 0.1rem;
+    text-shadow: 2px 2px 5px var(--BORDER-COLOR);
+    position: absolute;
+    left: 20px;
+    top: -100px;
+    animation: showWelcome 0.6s ease-in-out 2s forwards;
+}
+
+@keyframes showWelcome {
+    0% {
+        top: -20px;
+        transform: skew(0deg, -5deg) scaleY(0);
+    }
+
+    80% {
+        top: 30px;
+        transform: skew(10deg, -5deg) scaleY(1.2);;
+    }
+
+    100%{
+        top: 20px;
+        transform: skew(-10deg, -5deg) scaleY(1);;
+    }
 }
