--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ textarea {
     --PADDING-SIDE: 2.5%;
 
     /* STANDARD MARGIN */
-    --MARGIN: clamp(1em, 2.5vh, 1.5em), 0;
+    --MARGIN: clamp(1em, 2.5vh, 1.5em) 0;
 }
 
 /* ||UTILITY CLASSES */
@@ -175,4 +175,67 @@ a:active {
         top: 20px;
         transform: skew(-10deg, -5deg) scaleY(1);;
     }
+}
+
+/* ||FOOTER */
+.footer {
+    position: sticky;
+    bottom: 0;
+    background-color: var(--HEADER-BGCOLOR);
+    color: var(--HEADER-COLOR);
+    padding: var(--PADDING-TB) var(--PADDING-SIDE);
+    text-align: center;
+    word-spacing: 0.2em;
+    letter-spacing: 0.2em;
+}
+
+/* ||MAIN */
+.main {
+    padding: var(--PADDING-TB) var(--PADDING-SIDE);
+}
+.main__article {
+    scroll-margin-top: 6.5rem;
+    margin: var(--MARGIN);
+}
+.main__article:first-child {
+    margin-top: 1em;
+}
+.main__article:last-child{
+    min-height: calc(100vh - 20em);
+}
+
+/* ||ABOUT */
+.about__trivia {
+    margin: var(--MARGIN)
+}
+
+.about__trivia__answer {
+    margin-top: 1em;
+}
+
+/* ||CONTACT */
+.contact__h2 {
+    margin: 0;
+}
+.contact__filedset {
+    border: none;
+}
+.contact__p {
+    margin: 0.2em 0;
+}
+.contact__label {
+    display: block;
+    font-weight: bold;
+}
+.contact__input, .contact__textarea{
+    padding: 0.5em;
+    border-radius: 10px;
+    border-width: 2px;
+    width: 100%;
+}
+.contact__button {
+    padding: 0.5em;
+    border-radius: 10px;
+    background-color: var(--HIGHLIGHT-COLOR);
+    color: var(--HEADER-COLOR);
 }
