--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,11 @@ textarea {
     --NAV-BGCOLOR: #fff;
     --HERO-BGCOLOR: rgba(51, 178, 51,0.75);
     --HERO-COLOR: #fff;
+    --BUTTON-COLOR: var(--HEADER-COLOR);
 
     /* BORDERS */
     --BORDERS: 1px solid var(--BORDER-COLOR);
+    --BORDER-RADIUS : 10px;
 
     /* STANDARD PADDING */
     --PADDING-TB: 0.25em;
@@ -56,6 +58,24 @@ textarea {
 
     /* STANDARD MARGIN */
     --MARGIN: clamp(1em, 2.5vh, 1.5em) 0;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --BGCOLOR-FADE: gray;
+        --BGCOLOR: #000;
+        --BODY-BGCOLOR: #333;
+        --BORDER-COLOR: whitesmoke;
+        --BUTTON-COLOR: #000;
+        --FONTCOLOR: whitesmoke;
+        --HEADER-COLOR: whitesmoke;
+        --HERO-COLOR: #333;
+        --HIGHLIGHT-COLOR: whitesmoke;
+        --LINK-ACTIVE: rgb(252, 200, 103);
+        --LINK-COLOR: whitesmoke;
+        --LINK-HOVER: orange;
+        --NAV-BGCOLOR: rgb(20, 20, 20);
+    }
 }
 
 /* ||UTILITY CLASSES */
@@ -229,13 +249,99 @@ a:active {
 }
 .contact__input, .contact__textarea{
     padding: 0.5em;
-    border-radius: 10px;
+    border-radius: var(--BORDER-RADIUS);
     border-width: 2px;
     width: 100%;
 }
-.contact__button {
+.contact__button 
+{
     padding: 0.5em;
-    border-radius: 10px;
+    border-radius: var(--BORDER-RADIUS);
     background-color: var(--HIGHLIGHT-COLOR);
-    color: var(--HEADER-COLOR);
+    color: var(--BUTTON-COLOR);
+    font-weight: bold;
+}
+
+/* ||MENU */
+thead, tbody, tfoot, tr {
+    display: contents;
+}
+
+.menu__container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 
+        "hd1 hd2 hd3"
+        "cr cr1 cr1p"
+        "cr cr2 cr2p"
+        "cr cr3 cr3p"
+        "sf sf1 sf1p"
+        "sf sf2 sf2p"
+        "sf sf3 sf3p"
+        "cs cs cs";
+        gap: 0.1em;
+        margin-bottom: 1em; 
+}
+.menu__cr {
+    grid-area: cr;
+}
+
+.menu__sf {
+    grid-area: sf;
+}
+
+.menu__cs {
+    grid-area: cs;
+}
+
+.menu__cr,
+.menu__sf, 
+.menu__cs,
+.menu__header {
+    color: var(--HIGHLIGHT-COLOR);
+    font-weight: bold;
+    height: 100%;
+    display: grid;
+    /* align-items: center; */
+    place-content: center;
+} 
+
+.menu__item, .menu__header {
+    width: 100%;
+    padding: 1em;
+    border: medium ridge var(--BORDER-COLOR);
+    border-collapse: collapse;
+    display: grid;
+    place-content: center;
+}
+
+/* .menu__item {
+    display: grid;
+    place-content: center;
+} */
+thead th:first-child {
+    border-top-left-radius: var(--BORDER-RADIUS) ;
+}
+thead th:last-child {
+    border-top-right-radius: var(--BORDER-RADIUS) ;
+}
+
+tfoot td {
+    border-bottom-left-radius: var(--BORDER-RADIUS);
+    border-bottom-right-radius: var(--BORDER-RADIUS);
+}
+
+@media screen and (min-width: 576px) {
+    .header__h1::before{
+        content: "😋 ";
+    } 
+    .header__h1::after{
+        content: " 😋";
+    } 
+    .menu__cr, 
+    .menu__cs, 
+    .menu__header, 
+    .menu__sf {
+        font-size: 120%;
+    }
 }
